fix bug and add alternative fix auto zoom out when changing image aspect ratio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ p:empty::before {
 }
 
 .advanced-cropper-stencil-overlay {
-  color: rgb(20, 20, 20) !important;
+  /* color: rgb(20, 20, 20) !important; */
 }
 
 .cropper-container {
